@@ -1,3 +1,10 @@
+2009-11-23  Andreas Kupries  <andreask@activestate.com>
+
+	* library/safetk.tcl (::safe::loadTk): [Bug 2902573]: Fixed access
+	to the cleanupHook of the safe base. The code used the old
+	internal commands which have been removed since 2009-11-05/06. See
+	Tcl's ChangeLog.
+
 2009-11-23  Donal K. Fellows  <dkf@users.sf.net>
 
 	* unix/Makefile.in: Added .PHONY lines to stop make from getting
